--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/spacelab/bootstrap.min.css -->
-    <link rel="stylesheet" href="/bootstrap/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/spacelab/bootstrap.min.css" integrity="sha384-F1AY0h4TrtJ8OCUQYOzhcFzUTxSOxuaaJ4BeagvyQL8N9mE4hrXjdDsNx249NpEc" crossorigin="anonymous"> -->
     <title>Kitchen Prep App</title>
     
 </head>
@@ -24,4 +21,5 @@
           </div>
        
     </body>
+    <script src="/app.js"></script>
 </html>
