--- a/index.html
+++ b/index.html
@@ -17,11 +17,22 @@
       <h1 class="">Kitchen Prep App</h1>
   </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
-      <li class="nav-item dropdown ">
+      <nav class="nav-item dropdown ">
         <a class="nav-link dropdown-toggle text-warning" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Prep Areas</a>
         <div class="dropdown-menu">
           <a class="dropdown-item" href="#">Cold Prep</a>
           <a class="dropdown-item" href="#">Saute Station</a>
+          <a class="dropdown-item" href="#">Broiler Station</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Separated link</a>
+        </div>
+      
+        </nav>
+          <nav class="nav-item dropdown ">
+        <a class="nav-link dropdown-toggle text-warningp pd-10" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Inventory</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Cold Prep Refrigerator</a>
+          <a class="dropdown-item" href="#">Saute Station Refrigerator</a>
           <a class="dropdown-item" href="#">Broiler Station</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Separated link</a>
