--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <!-- <link rel="stylesheet" href="https:/<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/darkly/bootstrap.min.css" integrity="sha384-nNK9n28pDUDDgIiIqZ/MiyO3F4/9vsMtReZK39klb/MtkZI3/LtjSjlmyVPS3KdN" crossorigin="anonymous">/stackpath.bootstrapcdn.com/bootswatch/4.5.2/spacelab/bootstrap.min.css" integrity="sha384-F1AY0h4TrtJ8OCUQYOzhcFzUTxSOxuaaJ4BeagvyQL8N9mE4hrXjdDsNx249NpEc" crossorigin="anonymous"> -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/darkly/bootstrap.min.css" integrity="sha384-nNK9n28pDUDDgIiIqZ/MiyO3F4/9vsMtReZK39klb/MtkZI3/LtjSjlmyVPS3KdN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  
+    <link rel="stylesheet" href="main.css">
+ 
 
     <title>Kitchen Prep App</title>
   </head>
   <body>
-    <div class="jumbotron bg-success">
-      <h1 class="">Kitchen Prep App</h1>
+    <div class="jumbotron  nav justify-content-center" id="jumbotron">
+      <h1 class="display-4 text-white">Kitchen Prep</h1>
   </div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
-      <nav class="nav-item dropdown ">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary nav justify-content-center">
+      <nav class="nav-item dropdown">
         <a class="nav-link dropdown-toggle text-warning" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Prep Areas</a>
         <div class="dropdown-menu">
           <a class="dropdown-item" href="#">Cold Prep</a>
@@ -29,14 +29,17 @@
       
         </nav>
           <nav class="nav-item dropdown ">
-        <a class="nav-link dropdown-toggle text-warningp pd-10" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Inventory</a>
+        <a class="nav-link dropdown-toggle text-warning" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Inventory</a>
         <div class="dropdown-menu">
           <a class="dropdown-item" href="#">Cold Prep Refrigerator</a>
           <a class="dropdown-item" href="#">Saute Station Refrigerator</a>
-          <a class="dropdown-item" href="#">Broiler Station</a>
+          <a class="dropdown-item" href="#">Broiler Station Refrigerator</a>
+          <a class="dropdown-item" href="#">Salad Regrigerator</a> <a class="dropdown-item" href="#">Oyster Refrigerator</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Separated link</a>
         </div>
+
+
       </li>
         </nav>
     <!-- Optional JavaScript; choose one of the two! -->
