tidied up the code

--- a/index.html
+++ b/index.html
@@ -12,36 +12,34 @@
 
     <title>Kitchen Prep App</title>
   </head>
-  <body>
-    <div class="jumbotron  nav justify-content-center" id="jumbotron">
-      <h1 class="display-4 text-white">Kitchen Prep</h1>
-  </div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary nav justify-content-center">
-      <nav class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-warning" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Prep Areas</a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Cold Prep</a>
-          <a class="dropdown-item" href="#">Saute Station</a>
-          <a class="dropdown-item" href="#">Broiler Station</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Separated link</a>
-        </div>
-      
-        </nav>
-          <nav class="nav-item dropdown ">
-        <a class="nav-link dropdown-toggle text-warning" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Inventory</a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Cold Prep Refrigerator</a>
-          <a class="dropdown-item" href="#">Saute Station Refrigerator</a>
-          <a class="dropdown-item" href="#">Broiler Station Refrigerator</a>
-          <a class="dropdown-item" href="#">Salad Regrigerator</a> <a class="dropdown-item" href="#">Oyster Refrigerator</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Separated link</a>
-        </div>
-
-
-      </li>
-        </nav>
+        <body>
+                   <div class="jumbotron  nav justify-content-center" id="jumbotron">
+                                  <h1 class="display-4 ">Kitchen Prep</h1>
+                    </div>
+                              <nav class="navbar navbar-expand-lg navbar-dark bg-primary nav justify-content-center">
+                                      <nav class="nav-item dropdown">
+                                               <a class="nav-link dropdown-toggle text-warning" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Prep Areas</a>
+                                                        <div class="dropdown-menu">
+                                                               <a class="dropdown-item" href="#">Cold Prep</a>
+                                                                <a class="dropdown-item" href="#">Saute Station</a>
+                                                                <a class="dropdown-item" href="#">Broiler Station</a>
+                                                          <div class="dropdown-divider"></div>
+                                                                  <a class="dropdown-item" href="#">Separated link</a>
+                                                           </div>
+                                        </nav>
+                     
+                                        <nav class="nav-item dropdown ">
+                                                     <a class="nav-link dropdown-toggle text-warning" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Inventory</a>
+                                                              <div class="dropdown-menu">
+                                                                      <a class="dropdown-item" href="#">Cold Prep Refrigerator</a>
+                                                                     <a class="dropdown-item" href="#">Saute Station Refrigerator</a>
+                                                                      <a class="dropdown-item" href="#">Broiler Station Refrigerator</a>
+                                                                      <a class="dropdown-item" href="#">Salad Regrigerator</a> <a class="dropdown-item" href="#">Oyster Refrigerator</a>
+                                                                  <div class="dropdown-divider"></div>
+                                                                        <a class="dropdown-item" href="#">Separated link</a>
+                                                                   </div>
+                                         </nav>
+                                </nav>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
