--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   
     <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Spectral:wght@200&display=swap" rel="stylesheet">
  
 
     <title>Kitchen Prep App</title>
   </head>
         <body>
                    <div class="jumbotron  nav justify-content-center" id="jumbotron">
-                                  <h1 class="display-4 ">Kitchen Prep</h1>
+                                  <h1 class="appTitle" id="appTitle">Kitchen Prep</h1>
                     </div>
-                              <nav class="navbar navbar-expand-lg navbar-dark bg-primary nav justify-content-center">
+                              <nav class="navbar navbar-expand-lg navbar-dark  nav justify-content-center" id="navbarDropdown">
                                       <nav class="nav-item dropdown">
-                                               <a class="nav-link dropdown-toggle text-warning" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Prep Areas</a>
+                                               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="menuLabel1">Prep Areas</a>
                                                         <div class="dropdown-menu">
                                                                <a class="dropdown-item" href="#">Cold Prep</a>
                                                                 <a class="dropdown-item" href="#">Saute Station</a>
@@ -29,7 +31,7 @@
                                         </nav>
                      
                                         <nav class="nav-item dropdown ">
-                                                     <a class="nav-link dropdown-toggle text-warning" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Inventory</a>
+                                                     <a class="nav-link dropdown-toggle text-warning" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="menuLabel2">Inventory</a>
                                                               <div class="dropdown-menu">
                                                                       <a class="dropdown-item" href="#">Cold Prep Refrigerator</a>
                                                                      <a class="dropdown-item" href="#">Saute Station Refrigerator</a>
