--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                                       <nav class="nav-item dropdown">
                                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="menuLabel1">Prep Areas</a>
                                                         <div class="dropdown-menu">
-                                                               <a class="dropdown-item" href="#">Cold Prep</a>
+                                                               <a class="dropdown-item" href="coldPrep.html">Cold Prep</a>
                                                                 <a class="dropdown-item" href="#">Saute Station</a>
                                                                 <a class="dropdown-item" href="#">Broiler Station</a>
                                                           <div class="dropdown-divider"></div>
