--- a/index.html
+++ b/index.html
@@ -42,6 +42,31 @@
                                                                    </div>
                                          </nav>
                                 </nav>
+                                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                                  <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                      <img src="/referenceLibrary/images/brioche.png" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                      <img src="/referenceLibrary/images/potatoPuffs.png" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                      <img src="/referenceLibrary/images/strudel.png" class="d-block w-100" alt="...">
+                                    </div>
+                                  </div>
+                                  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                  </a>
+                                  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                  </a>
+                                </div>
+                                <div class=""></div>
+                            <div class="card-footer">
+                  <footer class="footer" ><span>&#169;</span>MichaelA.Yount</footer>
+          </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
