--- a/coldPrep.html
+++ b/coldPrep.html
@@ -7,11 +7,41 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
+    <link rel="stylesheet" href="/main.css">
+    <title>Cold Prep Station</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+        <h1 class="coldPrepHeading">Cold Station Prep</h1>
+    </div>
+        <div class="container">
+            <div class="row">
+                <div class=""></div>
+            <div class="card" style="width: 18rem;">
+                <img src="/referenceLibrary/images/oysters.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Oysters in the Cooler</h5>
+                  <p class="card-text">This section will have the various oysters in the cooler</p>
+                  <a href="/oysterPage.html" class="btn btn-success">Start Shucking</a>
+                </div>
+              </div>
+        </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class=""></div>
+            <div class="card" style="width: 18rem;">
+                <img src="/referenceLibrary/images/lobster.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Seafood in the Cooler</h5>
+                  <p class="card-text">This section will have the seafood in the cooler.Including: shrimp, scallops and lobster.
+                  </p>
+                  <a href="#" class="btn btn-success">Bay Marie</a>
+                </div>
+                
+              </div>
+        </div>
+        </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
