--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   
-    <link rel="stylesheet" href="main.css">
+    
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@200&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="main.css">
  
 
     <title>Kitchen Prep App</title>
@@ -18,11 +19,11 @@
                    <div class="jumbotron  nav justify-content-center" id="jumbotron">
                                   <h1 class="appTitle" id="appTitle">Kitchen Prep</h1>
                     </div>
-                              <nav class="navbar navbar-expand-lg navbar-dark  nav justify-content-center" id="navbarDropdown">
+                              <nav class="navbar navbar-expand-lg navbar-dark" id="navbarDropdown">
                                       <nav class="nav-item dropdown">
                                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="menuLabel1">Prep Areas</a>
                                                         <div class="dropdown-menu">
-                                                               <a class="dropdown-item" href="#">Cold Prep</a>
+                                                               <a class="dropdown-item" href="/coldPrep.html">Cold Prep</a>
                                                                 <a class="dropdown-item" href="#">Saute Station</a>
                                                                 <a class="dropdown-item" href="#">Broiler Station</a>
                                                           <div class="dropdown-divider"></div>
@@ -31,7 +32,7 @@
                                         </nav>
                      
                                         <nav class="nav-item dropdown ">
-                                                     <a class="nav-link dropdown-toggle text-warning" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="menuLabel2">Inventory</a>
+                                                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="menuLabel2">Inventory</a>
                                                               <div class="dropdown-menu">
                                                                       <a class="dropdown-item" href="#">Cold Prep Refrigerator</a>
                                                                      <a class="dropdown-item" href="#">Saute Station Refrigerator</a>
