new styling, code refactoring

--- a/coldPrep.html
+++ b/coldPrep.html
@@ -16,30 +16,32 @@
     </div>
         <div class="container">
             <div class="row">
-                <div class=""></div>
+                <div class="col-sm-6 mx-auto"></div>
             <div class="card" style="width: 18rem;">
-                <img src="/referenceLibrary/images/oysters.png" class="card-img-top" alt="...">
+                <img src="/referenceLibrary/images/oysters.png" class="card-img-top oystImg" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Oysters in the Cooler</h5>
                   <p class="card-text">This section will have the various oysters in the cooler</p>
-                  <a href="/oysterPage.html" class="btn btn-success">Start Shucking</a>
+                  <a href="/oysterPage.html" class="btn btn-success enterBtn">Start Shucking</a>
                 </div>
               </div>
         </div>
         </div>
+      </div>
+      
         <div class="container">
             <div class="row">
-                <div class=""></div>
-            <div class="card" style="width: 18rem;">
-                <img src="/referenceLibrary/images/lobster.png" class="card-img-top" alt="...">
-                <div class="card-body">
+                <div class="col-sm-6 mx-auto">
+               <div class="card" style="width: 18rem;">
+                   <img src="/referenceLibrary/images/lobster.png" class="card-img-top lobstImg" alt="...">
+                  <div class="card-body">
                   <h5 class="card-title">Seafood in the Cooler</h5>
                   <p class="card-text">This section will have the seafood in the cooler.Including: shrimp, scallops and lobster.
                   </p>
-                  <a href="#" class="btn btn-success">Bay Marie</a>
-                </div>
-                
-              </div>
+                  <a href="#" class="btn btn-success enterBtn">Bay Marie</a>
+                  </div>
+               </div>
+             </div>     
         </div>
         </div>
 
