--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                         <nav class="nav-item dropdown ">
                                                      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="menuLabel2">Inventory</a>
                                                               <div class="dropdown-menu">
-                                                                      <a class="dropdown-item" href="#">Cold Prep Refrigerator</a>
+                                                                      <a class="dropdown-item" href="/coldPrep.html">Cold Prep Refrigerator</a>
                                                                      <a class="dropdown-item" href="#">Saute Station Refrigerator</a>
                                                                       <a class="dropdown-item" href="#">Broiler Station Refrigerator</a>
                                                                       <a class="dropdown-item" href="#">Salad Regrigerator</a> <a class="dropdown-item" href="#">Oyster Refrigerator</a>
