changed color scheme

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <body>
                    <div class="jumbotron  nav justify-content-center" id="jumbotron">
                                   <h1 class="appTitle" id="appTitle">Kitchen Prep</h1>
+                                  <!-- <img src="/referenceLibrary/images/potatoPuffs.png"alt=""  id="puffsImg"> -->
                     </div>
-                              <nav class="navbar navbar-expand-lg navbar-dark" id="navbarDropdown">
+                              <nav class="navbar navbar-expand-lg navbar-lt" id="navbarDropdown">
                                       <nav class="nav-item dropdown">
                                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="menuLabel1">Prep Areas</a>
                                                         <div class="dropdown-menu">
@@ -30,8 +31,19 @@
                                                                   <a class="dropdown-item" href="#">Separated link</a>
                                                            </div>
                                         </nav>
+                                        <nav class="navbar navbar-expand-lg navbar-dark" id="navbarDropdown">
+                                          <nav class="nav-item dropdown">
+                                                   <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="menuLabel1">Inventory</a>
+                                                            <div class="dropdown-menu">
+                                                                   <a class="dropdown-item" href="/coldPrep.html">Cold Prep</a>
+                                                                    <a class="dropdown-item" href="#">Saute Station</a>
+                                                                    <a class="dropdown-item" href="#">Broiler Station</a>
+                                                              <div class="dropdown-divider"></div>
+                                                                      <a class="dropdown-item" href="#">Separated link</a>
+                                                               </div>
+                                            </nav>
                      
-                                        <nav class="nav-item dropdown ">
+                                        <!-- <nav class="nav-item dropdown ">
                                                      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="menuLabel2">Inventory</a>
                                                               <div class="dropdown-menu">
                                                                       <a class="dropdown-item" href="/coldPrep.html">Cold Prep Refrigerator</a>
@@ -41,9 +53,17 @@
                                                                   <div class="dropdown-divider"></div>
                                                                         <a class="dropdown-item" href="#">Separated link</a>
                                                                    </div>
-                                         </nav>
+                                         </nav> -->
                                 </nav>
-                                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                                <div class="container-fluid">
+                                  <select class="form-control form-control-lg">
+                                    <option>Prep Item Select</option>
+                                    <option>Prep Item Select</option>
+
+                                  </select>
+                                </div>
+                                <!-- picture carosel -->
+                                <!-- <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                                   <div class="carousel-inner">
                                     <div class="carousel-item active">
                                       <img src="/referenceLibrary/images/brioche.png" class="d-block w-100" alt="...">
@@ -63,7 +83,7 @@
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Next</span>
                                   </a>
-                                </div>
+                                </div> -->
                                 <div class=""></div>
                             <div class="card-footer">
                   <footer class="footer" ><span>&#169;</span>MichaelA.Yount</footer>
