--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                         </nav>
                                         <nav class="navbar navbar-expand-lg navbar-dark" id="navbarDropdown">
                                           <nav class="nav-item dropdown">
-                                                   <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="menuLabel1">Inventory</a>
+                                                   <a class="nav-link dropdown-toggle pd-5" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="menuLabel1">Inventory</a>
                                                             <div class="dropdown-menu">
                                                                    <a class="dropdown-item" href="/coldPrep.html">Cold Prep</a>
                                                                     <a class="dropdown-item" href="#">Saute Station</a>
