--- a/coldPrep.html
+++ b/coldPrep.html
@@ -11,6 +11,7 @@
     <title>Cold Prep Station</title>
   </head>
   <body>
+    <button type="button" class="btn btn-primary">Back</button>
     <div class="container">
         <h1 class="coldPrepHeading">Cold Station Prep</h1>
         <div class="container">
@@ -36,7 +37,7 @@
                   <h5 class="card-title">Seafood in the Cooler</h5>
                   <p class="card-text">This section will have the seafood in the cooler.Including: shrimp, scallops and lobster.
                   </p>
-                  <a href="#" class="btn btn-success enterBtn">Bay Marie</a>
+                  <a href="/index.html" class="btn btn-success enterBtn" id="backBtn">Bay Marie</a>
                   </div>
                </div>
              </div>     
@@ -54,5 +55,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     -->
+    <script src="/app.js"></script>
   </body>
 </html>
