--- a/index.html
+++ b/index.html
@@ -88,12 +88,13 @@
                                 </div>
                                 <div class="container">
                                   <div class="row">
-                                    <div class="col s12">
+                                    <div class="col-md-6">
                                       <div id="main" class="card">
                                         <span class="card-title prepList">Prep List</span>
+                                        <hr>
                                         <div class="row">
                                           <form id="task-form">
-                                            <div class="input-field col s12">
+                                            <div class="input-field col">
                                               <input type="text" name="prep" id="prep">
                                               <label for="task">New prep</label>
                                             </div>
