--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                                           </div>
                                         </nav>
                                       </nav>
-                               <nav class="navbar navbar-dark" id="navbarDropdown2">
+                               <!-- <nav class="navbar navbar-dark" id="navbarDropdown2">
                                           <nav class="nav-item dropdown">
                                                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="menuLabel2">Inventory</a>
                                                             <div class="dropdown-menu">
@@ -51,12 +51,10 @@
                                                                       <a class="dropdown-item" href="#">Separated link</a>
                                                                </div>
                                           </nav>
-                                        </nav>
-                    </div>
-                    </div>
-                              
+                                        </nav> -->
+                    
                                 <div class="container">
-                                  <select class="form-control form-control-lg">
+                                  <select class="form-control form-control-lg recipeList">
                                     <option>Quick Recipe Select</option>
                                     <option>white sauce</option>
                                     <option>alfredo sauce</option>
@@ -77,10 +75,9 @@
                                     <option>Prep Item Select</option>
                                     <option>Prep Item Select</option>
                                     <option>Prep Item Select</option>
-
-
-                                  </select>
-                                </div>
+                                </select>
+                            </div>
+                    </div>
                                 <div class="container">
                                   <div class="row">
                                     <div class="col-md-6">
@@ -100,6 +97,7 @@
                                     </div>
                                   </div>
                                 </div>
+                    </div>
                                 <!-- picture carosel -->
                                 <!-- <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                                   <div class="carousel-inner">
