--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
                       <img src="/referenceLibrary/images/onion.png" class="img-fluid "  alt="broccoli"  id="puffsImg" >
 
                                   <h1 class="appTitle" id="appTitle">Kitchen Prep</h1>
+                                  <p class="titleSlogan">A kitchen team building app</p>
                 </div>
           </div>
                   <div class="container">
                     <div class="row">
-                      <div class="col-md-12">
+                      <div class="col-12">
                           <nav class="navbar navbar-lg navbar-lt" id="navbarDropdown">
                                   <nav class="nav-item dropdown">
+                                    <div class="container">
+                                    <img src="/referenceLibrary/images/stoveKnob.png" alt="stoveKnob" class="stoveKnob">
                                             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" id="menuLabel1">Prep Areas</a>
                                                         <div class="dropdown-menu">
                                                                <a class="dropdown-item" href="/coldPrep.html">Cold Prep</a>
@@ -78,16 +81,17 @@
                                 </select>
                             </div>
                     </div>
-                                <div class="container">
+                               <div class="container">
                                   <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-md-12">
                                       <div id="main" class="card">
                                         <span class="card-title prepList">Prep List</span>
                                         <hr>
                                         <div class="row">
+                                        
                                           <form id="task-form">
-                                            <div class="input-field col">
-                                              <input type="text" name="prep" id="prep">
+                                            <div class="input-field">
+                                              <input type="text" name="prep" id="prep" class="form-control">
                                               <label for="task">New prep</label>
                                             </div>
                                             <input type="submit" value="Add Prep" class="prepListBtn">
