added custom prep area and starting recipe search

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                                                 <a class="dropdown-item" href="#">Saute Station</a>
                                                                 <a class="dropdown-item" href="#">Broiler Station</a>
                                                           <div class="dropdown-divider"></div>
-                                                                  <a class="dropdown-item" href="#">Separated link</a>
+                                                                  <input type="" class="dropdown-item" href="#" placeholder="custom prep area" id="customPrepArea"></a>
                                                           </div>
                                         </nav>
                                       </nav>
@@ -60,25 +60,12 @@
                                 <div class="container">
                                   <select class="form-control form-control-lg recipeList">
                                     <option>Quick Recipe Select</option>
+                                    <option>Search for recipe</option>
                                     <option>white sauce</option>
                                     <option>alfredo sauce</option>
                                     <option>marinara sauce</option>
                                     <option></option>
-                                    <option>Prep Item Select</option>
-                                    <option>Prep Item Select</option>
-                                    <option>Prep Item Select</option>
-                                    <option>Prep Item Select</option>
-                                    <option>Prep Item Select</option>
-                                    <option>Prep Item Select</option>
-                                    <option>Prep Item Select</option>
-                                    <option>Prep Item Select</option>
-                                    <option>Prep Item Select</option>
-                                    <option>Prep Item Select</option>
-                                    <option>Prep Item Select</option>
-                                    <option>Prep Item Select</option>
-                                    <option>Prep Item Select</option>
-                                    <option>Prep Item Select</option>
-                                    <option>Prep Item Select</option>
+                               
                                 </select>
                             </div>
                     </div>
