--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <body>
           <div class="container">
                 <div class="jumbotron" id="jumbotron">
-                      <img src="/referenceLibrary/images/broccoliSilou.png" class="img-fluid "  alt="broccoli"  id="puffsImg" >
-                      <img src="/referenceLibrary/images/knife.png" class="img-fluid "  alt="broccoli"  id="puffsImg" >
-                      <img src="/referenceLibrary/images/onion.png" class="img-fluid "  alt="broccoli"  id="puffsImg" >
+                      <img src="/referenceLibrary/images/broccoliSilou.png" class="img-fluid "  alt="broccoli"  id="broccoliImg" >
+                      <img src="/referenceLibrary/images/knife.png" class="img-fluid "  alt="knife"  id="knifeImg" >
+                      <img src="/referenceLibrary/images/onion.png" class="img-fluid "  alt="onion"  id="onionImg" >
 
                                   <h1 class="appTitle" id="appTitle">Kitchen Prep</h1>
                                   <p class="titleSlogan">A kitchen team building app</p>
@@ -40,7 +40,7 @@
                                                                 <a class="dropdown-item" href="#">Saute Station</a>
                                                                 <a class="dropdown-item" href="#">Broiler Station</a>
                                                           <div class="dropdown-divider"></div>
-                                                                  <input type="" class="dropdown-item" href="#" placeholder="custom prep area" id="customPrepArea"></a>
+                                                                  <input type="" class="dropdown-item" href="#" placeholder="custom prep area" id="customPrepAreaInput"></a>
                                                           </div>
                                         </nav>
                                       </nav>
@@ -57,7 +57,7 @@
                                           </nav>
                                         </nav> -->
                     
-                                <div class="container">
+                                <div class="container recipeList">
                                   <select class="form-control form-control-lg recipeList">
                                     <option>Quick Recipe Select</option>
                                     <option>Search for recipe</option>
@@ -73,7 +73,7 @@
                                   <div class="row">
                                     <div class="col-md-12">
                                       <div id="main" class="card">
-                                        <span class="card-title prepList">Prep List</span>
+                                        <span class="card-title prepListTitle">Today's Prep List</span>
                                         <hr>
                                         <div class="row">
                                         
