--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                 <div class="container" id="grabAPrepCont">
                                   <div class="row">
                                     <div class="col-md-12">
-                                      <div id="main" class="card">
+                                      <div id="todayPrepListCont" class="card">
                                         <span class="card-title prepListTitle">Grab a prep tag.</span>
                                         <hr>
                                         <div class="containerPrepList">
