--- a/index.html
+++ b/index.html
@@ -7,31 +7,26 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
-
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Spectral:wght@200&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/style.css" />
     <title>Kitchen Prep App</title>
   </head>
   <body>
-    <header>
-      <H1>Hello This is the new Kitchen app</H1>
-
+    <header class="header">
+      <div class="header__logo-box">
+        <img src="#" alt="kitchenPrepLogo" class="header__logo" />
+      </div>
+      <div class="header__text--box">
+        <h1 class="heading-primary">
+          <span class="heading-primary--main">Kitchen Prep App</span>
+          <span class="heading-primary--sub">A kitchen team building app.</span>
+        </h1>
+      </div>
     </header>
-
-
-
-
 
     <script src="/app.js"></script>
   </body>
