started home page and header

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <div class="header__logo-box">
         <img src="#" alt="kitchenPrepLogo" class="header__logo" />
       </div>
+        <div class="icon">
+          <img src="/referenceLibrary/images/broccoliSilou.png" alt="" class="icon__broccoli">
+        </div>
       <div class="header__text--box">
         <h1 class="heading-primary">
           <span class="heading-primary--main">Kitchen Prep App</span>
@@ -27,6 +30,14 @@
         </h1>
       </div>
     </header>
+    <section class="section-start">
+      <div class="u-center-text">
+        <h2 class="heading-secondary u-margin-bottom-big">
+
+        </h2>
+      </div>
+
+    </section>
 
     <script src="/app.js"></script>
   </body>
