added front animations

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         <div class="icon">
           <img src="/referenceLibrary/images/broccoliSilou.png" alt="" class="icon__broccoli">
         </div>
+        <div class="icon">
+          <img src="/referenceLibrary/images/knife.png" alt="" class="icon__knife">
+        </div>
+        <div class="icon">
+          <img src="/referenceLibrary/images/onion.png" alt="" class="icon__onion">
+        </div>
       <div class="header__text--box">
         <h1 class="heading-primary">
           <span class="heading-primary--main">Kitchen Prep App</span>
