implemented prep list daily menu

--- a/index.html
+++ b/index.html
@@ -16,19 +16,72 @@
     <title>Kitchen Prep App</title>
   </head>
   <body>
+    <div class="daily-prep-list">
+      <input
+        type="checkbox"
+        class="daily-prep-list__checkbox"
+        id="daily-toggle"
+      />
+
+      <label for="daily-toggle" class="daily-prep-list__button">Prep</label>
+
+      <div class="daily-prep-list__background">&nbsp;</div>
+
+      <nav class="daily-prep-list__nav">
+        <ul class="daily-prep-list__list">
+          <li class="daily-prep-list__item">
+            <a href="#" class="daily-prep-list__link"
+              ><span>01</span>Customize List</a
+            >
+          </li>
+          <li class="daily-prep-list__item">
+            <a href="#" class="daily-prep-list__link"
+              ><span>02</span>Cold prep</a
+            >
+          </li>
+          <li class="daily-prep-list__item">
+            <a href="#" class="daily-prep-list__link"
+              ><span>03</span>Line Prep List</a
+            >
+          </li>
+          <li class="daily-prep-list__item">
+            <a href="#" class="daily-prep-list__link"
+              ><span>04</span>Banquet Prep List</a
+            >
+          </li>
+          <li class="daily-prep-list__item">
+            <a href="#" class="daily-prep-list__link"
+              ><span>05</span>Bakery Prep List</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </div>
     <header class="header">
       <div class="header__logo-box">
         <img src="#" alt="kitchenPrepLogo" class="header__logo" />
       </div>
-        <div class="icon">
-          <img src="/referenceLibrary/images/broccoliSilou.png" alt="" class="icon__broccoli">
-        </div>
-        <div class="icon">
-          <img src="/referenceLibrary/images/knife.png" alt="" class="icon__knife">
-        </div>
-        <div class="icon">
-          <img src="/referenceLibrary/images/onion.png" alt="" class="icon__onion">
-        </div>
+      <div class="icon">
+        <img
+          src="/referenceLibrary/images/broccoliSilou.png"
+          alt=""
+          class="icon__broccoli"
+        />
+      </div>
+      <div class="icon">
+        <img
+          src="/referenceLibrary/images/knife.png"
+          alt=""
+          class="icon__knife"
+        />
+      </div>
+      <div class="icon">
+        <img
+          src="/referenceLibrary/images/onion.png"
+          alt=""
+          class="icon__onion"
+        />
+      </div>
       <div class="header__text--box">
         <h1 class="heading-primary">
           <span class="heading-primary--main">Kitchen Prep App</span>
@@ -38,11 +91,8 @@
     </header>
     <section class="section-start">
       <div class="u-center-text">
-        <h2 class="heading-secondary u-margin-bottom-big">
-
-        </h2>
+        <h2 class="heading-secondary u-margin-bottom-big"></h2>
       </div>
-
     </section>
 
     <script src="/app.js"></script>
