finished preplist modal

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         class="daily-prep-list__checkbox"
         id="daily-toggle"
       />
-
-      <label for="daily-toggle" class="daily-prep-list__button">Prep</label>
+      <label for="daily-toggle" class="daily-prep-list__button"></label>
 
       <div class="daily-prep-list__background">&nbsp;</div>
 
