finished the prep menu pop up

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         class="daily-prep-list__checkbox"
         id="daily-toggle"
       />
-      <label for="daily-toggle" class="daily-prep-list__button"></label>
-
+      <label for="daily-toggle" class="daily-prep-list__button">
+        <span class="daily-prep-list__icon">&nbsp;</span>
+      </label>
       <div class="daily-prep-list__background">&nbsp;</div>
-
       <nav class="daily-prep-list__nav">
         <ul class="daily-prep-list__list">
           <li class="daily-prep-list__item">
