atring work on the prep lists

--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
     </header>
     <section class="section-start">
       <div class="u-center-text">
-        <h2 class="heading-secondary u-margin-bottom-big"></h2>
+        <h2 class="heading-secondary u-margin-bottom-big">
+          These are the quick list properties
+        </h2>
       </div>
     </section>
 
