--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <header class="header">
       <div class="header__logo-box">
-        <img src="#" alt="kitchenPrepLogo" class="header__logo" />
+        <img src="/referenceLibrary/logos/KPALOGO.png" alt="kitchenPrepLogo" class="header__logo" />
       </div>
       <div class="icon">
         <img
