--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="icon"
+      href="/referenceLibrary/logos/kitchenPrepAppFavicon.ico"
+    />
     <link rel="stylesheet" href="/css/style.css" />
     <title>Kitchen Prep App</title>
   </head>
@@ -58,7 +62,11 @@
     </div>
     <header class="header">
       <div class="header__logo-box">
-        <img src="/referenceLibrary/logos/KPALOGO.png" alt="kitchenPrepLogo" class="header__logo" />
+        <img
+          src="/referenceLibrary/logos/KPALOGO.png"
+          alt="kitchenPrepLogo"
+          class="header__logo"
+        />
       </div>
       <div class="icon">
         <img
