developing quick list buttons

--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="icon"
-      href="/referenceLibrary/logos/kitchenPrepAppFavicon.ico"
-    />
+    <link rel="icon" href="/referenceLibrary/logos/kitchenPrepAppFavicon.ico" />
     <link rel="stylesheet" href="/css/style.css" />
     <title>Kitchen Prep App</title>
   </head>
@@ -96,7 +93,25 @@
         </h1>
       </div>
     </header>
+
     <section class="section-start">
+      <nav class="section-start__nav">
+        <ul class="section-start__list">
+          <li class="section-start__list--item">
+            <a href="#" class="section-start--link">Recipe Book</a>
+          </li>
+          <li class="section-start__list--item">
+            <a href="#" class="section-start--link">Conversions</a>
+          </li>
+          <li class="section-start__list--item">
+            <a href="#" class="section-start--link">Food Safety</a>
+          </li>
+          <li class="section-start__list--item">
+            <a href="#" class="section-start--link">Quick Notes</a>
+          </li>
+        </ul>
+      </nav>
+
       <div class="u-center-text">
         <h2 class="heading-secondary u-margin-bottom-big">
           These are the quick list properties
