labeling and switching from links to buttons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         id="daily-toggle"
       />
       <label for="daily-toggle" class="daily-prep-list__button">
-        <span class="daily-prep-list__icon">&nbsp;</span>
+        <label for="daily-prep-list" class="daily-prep-list__button--label">Prep Now</label
+        >
+        <span class="daily-prep-list__icon"></span>
       </label>
       <div class="daily-prep-list__background">&nbsp;</div>
       <nav class="daily-prep-list__nav">
@@ -95,23 +97,24 @@
     </header>
 
     <section class="section-start">
-      <nav class="section-start__nav">
-        <ul class="section-start__list">
-          <li class="section-start__list--item">
-            <a href="#" class="section-start--link">Recipe Book</a>
-          </li>
-          <li class="section-start__list--item">
-            <a href="#" class="section-start--link">Conversions</a>
-          </li>
-          <li class="section-start__list--item">
-            <a href="#" class="section-start--link">Food Safety</a>
-          </li>
-          <li class="section-start__list--item">
-            <a href="#" class="section-start--link">Quick Notes</a>
-          </li>
-        </ul>
-      </nav>
-
+      <div class="section-start__links">
+        <nav class="section-start__nav">
+          <ul class="section-start__list">
+            <li class="section-start__list--item">
+              <a href="#" class="section-start--link">Recipe Book</a>
+            </li>
+            <li class="section-start__list--item">
+              <a href="#" class="section-start--link">Conversions</a>
+            </li>
+            <li class="section-start__list--item">
+              <a href="#" class="section-start--link">Food Safety</a>
+            </li>
+            <li class="section-start__list--item">
+              <a href="#" class="section-start--link">Quick Notes</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
       <div class="u-center-text">
         <h2 class="heading-secondary u-margin-bottom-big">
           These are the quick list properties
